# subjective-logic

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  tox.ini
src/subjective_logic/: __init__.py  __main__.py  binomial_opinion.py
tests/: test_binomial_opinion.py
