[build-system]
requires = ["setuptools>=69.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subjective_logic"
version = "1.0.1"
dynamic = []

authors = [
  {name = "Waleed Khan", email = "waleedqk@gmail.com"},
]
maintainers = [
  {name = "Waleed Khan", email = "waleedqk@gmail.com"}
]

description = "A Python implementation of subjective logic."
keywords = ["subjective logic", "opinion", "python"]

readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0"
]


[project.optional-dependencies]
dev = [
    "tox",
    "black"
]
doc = [
    "sphinx",
    "sphinx-rtd-theme"
]
test = [
    "pytest>=6.0",
    "pytest-cov"
]

[project.urls]
Homepage = "https://github.com/waleedqk/subjective-logic"
Documentation = "https://github.com/waleedqk/subjective-logic/blob/main/README.md"
Repository = "https://github.com/waleedqk/subjective-logic"
Issues = "https://github.com/waleedqk/subjective-logic/issues"
Changelog = "https://github.com/waleedqk/subjective-logic/CHANGELOG.md"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests", "src"
]
